# standard-ebooks-hardcover

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/se_hardcover/: __init__.py  audit.py  catalog.py  cli.py  config.py  hardcover.py  matching.py  models.py  notify.py  reconcile.py  review.py  standard_ebooks.py  state.py  sync.py  webapp.py
src/se_hardcover/web/: index.html
tests/: conftest.py  test_audit.py  test_matching.py  test_reconcile.py  test_review.py  test_standard_ebooks.py  test_state.py  test_sync.py  test_webapp.py
tests/fixtures/: karamazov-book-page.html  karamazov.opf  listing-page.html  new-releases.atom  pride-and-prejudice.opf
